--- a/projects.qmd
+++ b/projects.qmd
@@ -1,39 +1,34 @@
 ---
 title: "projects"
-format: html
----
-
 R PROJECT
 
 Outline
 
-Laptop Specs 2024 dataset: <https://www.kaggle.com/datasets/pradeepjangirml007/laptop-data-set/data> 
+Laptop Specs 2024 dataset: https://www.kaggle.com/datasets/pradeepjangirml007/laptop-data-set/data 
 
-CPU performance dataset: <https://www.cpubenchmark.net/cpu_list.php> 
+CPU performance dataset: https://www.cpubenchmark.net/cpu_list.php 
 
-GPU performance dataset: <https://www.videocardbenchmark.net/gpu_list.php> 
+GPU performance dataset: https://www.videocardbenchmark.net/gpu_list.php 
 
 Scoring for each variable
 
--   CPU Mark = raw mark score
+CPU Mark = raw mark score
 
--   RAM =  100=4GB, 200=8GB, 300=16GB, 400=32GB, 500=64GB
+RAM =  100=4GB, 200=8GB, 300=16GB, 400=32GB, 500=64GB
 
--   GPU Mark = raw mark score
+GPU Mark = raw mark score
 
--   Hard Drive Storage = 100 for HDD, 200 for Combo, 300 for SSD + 1 point for each 100GB of storage
-
--   
+Hard Drive Storage = 100 for HDD, 200 for Combo, 300 for SSD + 1 point for each 100GB of storage
 
 Maximum Component Score Calculations
 
--   CPU Mark = 176418
+CPU Mark = 176418
 
--   RAM = 500
+RAM = 500
 
--   GPU = 42305
+GPU = 42305
 
--   Hard Drive = 320
+Hard Drive = 320
 
 Normalizing Scores
 
@@ -41,33 +36,33 @@ Normalized Score =  Component Score/Maximum Component Score x 100
 
 Weights for performance grade algorithm for productivity/workstation audience
 
-1.  CPU Norm.Score  x 35%
+CPU Norm.Score  x 35%
 
 <!-- -->
 
-2.  RAM Norm.Score  x 30%
+RAM Norm.Score  x 30%
 
 <!-- -->
 
-3.  GPU Norm.Score  x 20%
+GPU Norm.Score  x 20%
 
 <!-- -->
 
-4.  Hard Drive Norm.Scorex 15%
+Hard Drive Norm.Scorex 15%
 
 Final Algorithm
 
 CPU norm.weight.score 
 
-\+
++
 
 RAM norm.weight.score
 
-\+
++
 
 GPU norm.weight.score
 
-\+
++
 
 Harddrive norm.weight.score
 
@@ -75,11 +70,9 @@ Harddrive norm.weight.score
 
 Performance Grade
 
-------------------------------------------------------------------------
-
 Code:
 
-```{r}library(tidyverse)}
+{r}library(tidyverse)
 #setting up datasets
 laptop <- read_csv("data/laptop.csv")
 view(laptop)
@@ -158,8 +151,7 @@ Performance_Grade = cpu_weighted + ram_weighted
 library(ggplot2)  
 ggplot(data = final_data, aes(x = Price, y = Performance_Grade)) + geom_point()
 
-```
 
-------------------------------------------------------------------------
 
-![](Rplot.png)
+format: html
+---
