--- a/projects.qmd
+++ b/projects.qmd
@@ -1,3 +1,8 @@
 ---
 title: "projects"
+listing: 
+  contents: projects_file
+  type: default
+  fields: [image, title, description]
+  sort: "date desc"
 ---
