--- a/projects_file/Personal_Website.qmd
+++ b/projects_file/Personal_Website.qmd
@@ -2,7 +2,9 @@
 title: "Personal Website"
 description: "testing"
 date: "2025-08-07"
+date-format: null
+status: "In Progress"
 image: "Projects_Cover.png"
 format: html
+title-block-published: ""
 ---
-
